--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,9 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <artifactId>
+                spring-boot-starter-data-cassandra-reactive
+            </artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
